# furycli

./: fury_app.py  furycli  furycli.spec  hello.py  index.html  memory.txt  portfolio.css  portfolio.html  pyproject.toml  sample.txt  samplefile.txt  script.js
data/: db.json
furycli.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
furycli_pkg/: __main__.py
furycli_pkg/commands/: ai.py  build.py  db.py  file.py  file_commands.py  files.py  net.py  notes.py  plugin.py  project.py  search.py  system.py  task.py  tools.py
furycli_pkg/core/: app.py  app.py.save
myproject/: README.md
plugins/: weather.plugin
testproject/: README.md
testproject/src/: main.py
