[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "furycli"
version = "1.0.0"
description = "Custom CLI tool built with Python"
requires-python = ">=3.10"
dependencies = [
    "typer",
    "rich"
]

[project.scripts]
furycli = "furycli_pkg.__main__:app"
